--- a/views/admin/agregar.hbs
+++ b/views/admin/agregar.hbs
@@ -7,10 +7,10 @@
                 <input type="text" class="form-control" placeholder="Título" name="titulo">
             </div>
             <div class="mb-3 row">
-                <textarea type="text" class="form-control" placeholder="Subtítulo" name="subtitulo"></textarea>
+                <textarea class="form-control" placeholder="Subtítulo" name="subtitulo"></textarea>
             </div>
             <div class="mb-3 row">
-                <textarea type="text" class="form-control" placeholder="Cuerpo" name="cuerpo"></textarea>
+                <textarea class="form-control" placeholder="Cuerpo" name="cuerpo"></textarea>
             </div>
             <div class="mb-3 row">
                 <label>Imagen: <input type="file" class="form-control" name="imagen" id="imagen" /></label>
